--- a/gradle.properties
+++ b/gradle.properties
@@ -17,4 +17,4 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
-unsplash_access_key="ENTER YOUR ACCESS KEY HERE"
+unsplash_access_key="cLVta7ajwpK3LYCFoY_7pfgx8SQUf7T1YTxnYx6BgEI"
